--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,10 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+
+        <link rel="stylesheet" href="vendor/onsenui/css/onsenui.css">
+        <link rel="stylesheet" href="vendor/onsenui/css/onsen-css-components.min.css">
+        <script src="vendor/onsenui/js/onsenui.min.js"></script>
         <title>Hello World</title>
     </head>
     <body>
